Se agregaron los cambios el día 11/07/2019 a las 11:33

--- a/Mis apuntes (notebook)/archivos.ipynb
+++ b/Mis apuntes (notebook)/archivos.ipynb
@@ -1853,7 +1853,8 @@
     }
    ],
    "source": [
-    "# Contar las palabras en archivo PDF\n",
+    "# Escribir un programa en python que cuente el número de palabras que tiene\n",
+    "# el libro del Quijote de la Mancha de Miguel de Cervantes Savedra\n",
     "import PyPDF2\n",
     "import sys\n",
     "import warnings\n",
@@ -1897,23 +1898,6 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Escribir un programa en python que cuente el número de palabras que tiene\n",
-    "# el libro del Quijote de la Mancha de Miguel de Cervantes Saavedra"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
