Se modificó la libreta el día 14/07/2019 a las 13:00

--- a/Mis apuntes (notebook)/analisisSintactico.ipynb
+++ b/Mis apuntes (notebook)/analisisSintactico.ipynb
@@ -393,6 +393,260 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** Analizador Léxico de la Expresión print ---\n",
+      "\n",
+      "Ingrese una expresión: print(10+4-5)\n",
+      "Token('PRINT', 'print')\n",
+      "Token('OPEN_PAREN', '(')\n",
+      "Token('NUMBER', '10')\n",
+      "Token('SUM', '+')\n",
+      "Token('NUMBER', '4')\n",
+      "Token('SUB', '-')\n",
+      "Token('NUMBER', '5')\n",
+      "Token('CLOSE_PAREN', ')')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crear un analizador sintáctico\n",
+    "from rply import LexerGenerator\n",
+    "\n",
+    "class Lexer():\n",
+    "    def __init__(self):\n",
+    "        self.lexer = LexerGenerator()\n",
+    "\n",
+    "    def _add_tokens(self):\n",
+    "        # Print\n",
+    "        self.lexer.add('PRINT', r'print')\n",
+    "        # Parenthesis\n",
+    "        self.lexer.add('OPEN_PAREN', r'\\(')\n",
+    "        self.lexer.add('CLOSE_PAREN', r'\\)')\n",
+    "        # Semi Colon\n",
+    "        self.lexer.add('SEMI_COLON', r'\\;')\n",
+    "        # Operators\n",
+    "        self.lexer.add('SUM', r'\\+')\n",
+    "        self.lexer.add('SUB', r'\\-')\n",
+    "        self.lexer.add('MUL', r'\\*')\n",
+    "        self.lexer.add('DIV', r'\\/')\n",
+    "        # Number\n",
+    "        self.lexer.add('NUMBER', r'\\d+')\n",
+    "        # Ignore spaces\n",
+    "        self.lexer.ignore('\\s+')\n",
+    "\n",
+    "    def get_lexer(self):\n",
+    "        self._add_tokens()\n",
+    "        return self.lexer.build()\n",
+    "\n",
+    "print(\"*** Analizador Léxico de la Expresión print ---\")\n",
+    "text_input = input(\"\\nIngrese una expresión: \")\n",
+    "\n",
+    "lexer = Lexer().get_lexer()\n",
+    "tokens = lexer.lex(text_input)\n",
+    "\n",
+    "for token in tokens:\n",
+    "    print(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** Analizador Léxico de la Expresión print ---\n",
+      "\n",
+      "Ingrese una expresión: print(2/2);\n",
+      "1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Diego\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:147: ParserGeneratorWarning: 16 shift/reduce conflicts\n"
+     ]
+    }
+   ],
+   "source": [
+    "from rply import ParserGenerator\n",
+    "\n",
+    "class Lexer():\n",
+    "    def __init__(self):\n",
+    "        self.lexer = LexerGenerator()\n",
+    "\n",
+    "    def _add_tokens(self):\n",
+    "        # Print\n",
+    "        self.lexer.add('PRINT', r'print')\n",
+    "        # Parenthesis\n",
+    "        self.lexer.add('OPEN_PAREN', r'\\(')\n",
+    "        self.lexer.add('CLOSE_PAREN', r'\\)')\n",
+    "        # Semi Colon\n",
+    "        self.lexer.add('SEMI_COLON', r'\\;')\n",
+    "        # Operators\n",
+    "        self.lexer.add('SUM', r'\\+')\n",
+    "        self.lexer.add('SUB', r'\\-')\n",
+    "        self.lexer.add('MUL', r'\\*')\n",
+    "        self.lexer.add('DIV', r'\\/')\n",
+    "        # Number\n",
+    "        self.lexer.add('NUMBER', r'\\d+')\n",
+    "        # Ignore spaces\n",
+    "        self.lexer.ignore('\\s+')\n",
+    "\n",
+    "    def get_lexer(self):\n",
+    "        self._add_tokens()\n",
+    "        return self.lexer.build()\n",
+    "\n",
+    "class Number():\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "    def eval(self):\n",
+    "        return int(self.value)\n",
+    "\n",
+    "\n",
+    "class BinaryOp():\n",
+    "    def __init__(self, left, right):\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "\n",
+    "class Sum(BinaryOp):\n",
+    "    def eval(self):\n",
+    "        return self.left.eval() + self.right.eval()\n",
+    "\n",
+    "\n",
+    "class Sub(BinaryOp):\n",
+    "    def eval(self):\n",
+    "        return self.left.eval() - self.right.eval()\n",
+    "    \n",
+    "class Mul(BinaryOp):\n",
+    "    def eval(self):\n",
+    "        return self.left.eval() * self.right.eval()\n",
+    "    \n",
+    "class Div(BinaryOp):\n",
+    "    def eval(self):\n",
+    "        return self.left.eval() / self.right.eval()\n",
+    "\n",
+    "class Print():\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "    def eval(self):\n",
+    "        print(self.value.eval())\n",
+    "\n",
+    "class Parser():\n",
+    "    def __init__(self):\n",
+    "        self.pg = ParserGenerator(\n",
+    "            # A list of all token names accepted by the parser.\n",
+    "            ['NUMBER', 'PRINT', 'OPEN_PAREN', 'CLOSE_PAREN',\n",
+    "             'SEMI_COLON', 'SUM', 'SUB']\n",
+    "        )\n",
+    "\n",
+    "    def parse(self):\n",
+    "        @self.pg.production('program : PRINT OPEN_PAREN expression CLOSE_PAREN SEMI_COLON')\n",
+    "        def program(p):\n",
+    "            return Print(p[2])\n",
+    "\n",
+    "        @self.pg.production('expression : expression SUM expression')\n",
+    "        @self.pg.production('expression : expression SUB expression')\n",
+    "        @self.pg.production('expression : expression MUL expression')\n",
+    "        @self.pg.production('expression : expression DIV expression')\n",
+    "        def expression(p):\n",
+    "            left = p[0]\n",
+    "            right = p[2]\n",
+    "            operator = p[1]\n",
+    "            if operator.gettokentype() == 'SUM':\n",
+    "                return Sum(left, right)\n",
+    "            elif operator.gettokentype() == 'SUB':\n",
+    "                return Sub(left, right)\n",
+    "            elif operator.gettokentype() == 'MUL':\n",
+    "                return Sub(left, right)\n",
+    "            elif operator.gettokentype() == 'DIV':\n",
+    "                return Sub(left, right)\n",
+    "\n",
+    "        @self.pg.production('expression : NUMBER')\n",
+    "        def number(p):\n",
+    "            return Number(p[0].value)\n",
+    "\n",
+    "        @self.pg.error\n",
+    "        def error_handle(token):\n",
+    "            raise ValueError(token)\n",
+    "\n",
+    "    def get_parser(self):\n",
+    "        return self.pg.build()\n",
+    "    \n",
+    "class Parser():\n",
+    "    def __init__(self):\n",
+    "        self.pg = ParserGenerator(\n",
+    "            # A list of all token names accepted by the parser.\n",
+    "            ['NUMBER', 'PRINT', 'OPEN_PAREN', 'CLOSE_PAREN',\n",
+    "             'SEMI_COLON', 'SUM', 'SUB', 'MUL', 'DIV']\n",
+    "        )\n",
+    "\n",
+    "    def parse(self):\n",
+    "        @self.pg.production('program : PRINT OPEN_PAREN expression CLOSE_PAREN SEMI_COLON')\n",
+    "        def program(p):\n",
+    "            return Print(p[2])\n",
+    "\n",
+    "        @self.pg.production('expression : expression SUM expression')\n",
+    "        @self.pg.production('expression : expression SUB expression')\n",
+    "        @self.pg.production('expression : expression MUL expression')\n",
+    "        @self.pg.production('expression : expression DIV expression')\n",
+    "        def expression(p):\n",
+    "            left = p[0]\n",
+    "            right = p[2]\n",
+    "            operator = p[1]\n",
+    "            if operator.gettokentype() == 'SUM':\n",
+    "                return Sum(left, right)\n",
+    "            elif operator.gettokentype() == 'SUB':\n",
+    "                return Sub(left, right)\n",
+    "            elif operator.gettokentype() == 'MUL':\n",
+    "                return Mul(left, right)\n",
+    "            elif operator.gettokentype() == 'DIV':\n",
+    "                return Div(left, right)\n",
+    "\n",
+    "        @self.pg.production('expression : NUMBER')\n",
+    "        def number(p):\n",
+    "            return Number(p[0].value)\n",
+    "\n",
+    "        @self.pg.error\n",
+    "        def error_handle(token):\n",
+    "            raise ValueError(token)\n",
+    "\n",
+    "    def get_parser(self):\n",
+    "        return self.pg.build()\n",
+    "    \n",
+    "print(\"*** Analizador Léxico de la Expresión print ---\")\n",
+    "text_input = input(\"\\nIngrese una expresión: \")\n",
+    "\n",
+    "lexer = Lexer().get_lexer()\n",
+    "tokens = lexer.lex(text_input)\n",
+    "\n",
+    "pg = Parser()\n",
+    "pg.parse()\n",
+    "parser = pg.get_parser()\n",
+    "parser.parse(tokens).eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
